color contrast fixes

--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ color: #081e19;
 
 .phD_studs h5, .masters_students h5, .undergrad h5{
 font-size: 18px;
-color: #2b9882;
+color: #1e6a5b;
 }
 
 .phD_studs h6, .masters_students h6, .undergrad h6{
@@ -226,7 +226,7 @@ text-align: center;
 font-size: 14px;
 display:block;
 margin: auto 80px;
-color: #2b9882;
+color: #1e6a5b;
 
 }
 
